# 3DFieldImaging

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Color.h  ElectricField.cpp  ElectricField.h  Image.h  Point.h  PointCharge.cpp  PointCharge.h  Vec3.h  VectorSpace.cpp  VectorSpace.h  main.cpp  math.h
